src/styles/App.css
.content-scroll{
  overflow: auto;
  min-height: 2em;
  padding-top: 70px;
  padding-bottom: 62px;
}
.wrapper{
  width: 100%;
  height: 100%;

}

.foot {
  bottom:0;
  position:fixed;
  width: 100%;
}
.head{
  width: 100%;
  top:0;
  position: fixed;
}
.pad-card{
  margin-top: .4em;
}

